Updated my tech skills listing

--- a/about.html
+++ b/about.html
@@ -92,13 +92,13 @@
                 <h1 class="display-5 my-5 text-primaryClr fw-bold">ABOUT ME</h1>
                 <div class="mx-3 mx-md-0 mb-4">
                     <p class="fs-3">
-                        👨🏾‍💻 I'm a frontend web developer and UI/UX designer based in Kigali, Rwanda.
+                        👨🏾‍💻 I'm a full-stack web developer based in Kigali, Rwanda.
                     </p>
                     <p class="fw-bold text-muted text-justify" style="line-height: 26px;">
-                        With a passion for both design and development, I specialize in crafting intuitive user interfaces and writing elegant, efficient code. I've honed my skills in HTML, CSS, JavaScript, AngularJS, and jQuery to create simple yet beautiful web experiences, with a few of the backend skills like PHP.
+                        With a deep passion for design and development, I specialize in creating intuitive user interfaces and writing clean, efficient code. My expertise lies in the MERN stack, where I build seamless and visually appealing web experiences.
                     </p>
                     <p class="small text-muted">
-                        When I'm not coding or designing, you'll often find me lost in the rhythm of music 😄, either tinkering on a piano or in my choir. In fact, <a href="https://esgrprwanda.rf.gd/esgrp/Services/CHM_Songs" target="_blank">my biggets personal project</a> is about music.
+                        Outside of coding, I find joy in music, whether it's playing the piano or participating in my choir. Music is a big part of my life, and my <a href="https://esgrprwanda.rf.gd/esgrp/Services/CHM_Songs" target="_blank">most cherished side project</a> is centered around it.
                     </p>
                 </div>
             </section>
