--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <section class="container mx-md-4">
                 <h1 class="display-5 my-5 text-primaryClr fw-bold">Hey, I am Hirwa</h1>
                 <p class="fs-4 mx-3 mx-md-0 mb-4">
-                    A passionate <span class="text-secondaryClr fw-bold">frontend web developer</span> 💻. With a keen eye for design and a knack for creating intuitive user experiences, I craft dynamic and responsive websites that captivate and engage users
+                    A passionate <span class="text-secondaryClr fw-bold">full-stack web developer</span> 💻. With a keen eye for design and a knack for creating intuitive user experiences, I craft dynamic and responsive websites that captivate and engage users
                 </p>
                 <a href="projects.html" class="btn btn-lg pill mb-2 bg-primaryClr text-light bounceClick">🤩 My projects</a>
                 <a href="services.html" class="btn btn-lg pill mb-2 ms-3 ms-md-3 bg-primaryClr text-light bounceClick">🤝 Services</a>
@@ -131,15 +131,19 @@
                         My approach to projects involves relying on a specific set of technologies that I've become good at using. These tools have become indispensable to me, serving as the foundation for tackling any project that I work on:
                     </p>
                     <ul class="px-0 list-flexible">
-                        <li class="bg-secondaryClr text-light">JavaScript (JS)</li>
-                        <li class="bg-secondaryClr text-light">jQuery</li>
-                        <li class="bg-secondaryClr text-light">PHP</li>
+                        <li class="bg-secondaryClr text-light">ReactJS</li>
                         <li class="bg-secondaryClr text-light">AngularJS</li>
+                        <li class="bg-secondaryClr text-light">NodeJS</li>
+                        <li class="bg-secondaryClr text-light">Express</li>
+                        <li class="bg-secondaryClr text-light">MySQL</li>
+                        <li class="bg-secondaryClr text-light">Bootstrap</li>
+                        <li class="bg-secondaryClr text-light">Tailwind</li>
+                        <li class="bg-secondaryClr text-light">Sass</li>
+                        <li class="bg-secondaryClr text-light">JS & jQuery</li>
+                        <li class="bg-secondaryClr text-light">PHP</li>
                         <li class="bg-secondaryClr text-light">HTML</li>
                         <li class="bg-secondaryClr text-light">CSS</li>
-                        <li class="bg-secondaryClr text-light">Sass</li>
-                        <li class="bg-secondaryClr text-light">Bootstrap</li>
-                        <li class="bg-secondaryClr text-light">Figma</li>
+                        <!-- <li class="bg-secondaryClr text-light">Figma</li> -->
                     </ul>
                 </div>
             </article>
@@ -154,7 +158,7 @@
                     <img src="assets/images/projectImages/yacn_about_landscape.jpg" alt="Project image" class="object-fit-contain rad-10 clip-path-section" style="width: 35% !important;">
                 </p>
                 <p class="col-lg-5 p-2 p-md-4 fs-5">
-                    As a frontend web developer and UI/UX designer, I specialize in crafting dynamic and <strong>responsive websites</strong>, engaging <strong>landing pages</strong> optimized for performance, and creating <strong>intuitive designs</strong> that prioritize user experience and align with your brand identity.<br>
+                    As a full-stack web developer, I specialize in crafting dynamic and <strong>responsive websites</strong>, engaging <strong>landing pages</strong> optimized for performance, and creating <strong>intuitive designs</strong> that prioritize user experience and align with your brand identity.<br>
                     <a href="services.html" class="btn btn-lg bg-secondaryClr text-light my-4 clickDown">My services</a>
                 </p>
             </div>
