--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
                     </ul>
                     <p class="d-flex gap-2">
                         <a href="https://github.com/Hirwa9/ESG-website" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
-                        <a href="https://esgrprwanda.rf.gd/" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown">Visit site <span class="fa fa-angle-right ms-1"></span></a>
+                        <a href="https://esgrprwanda.rf.gd/" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown">Visit<span class="fa fa-angle-right ms-1"></span></a>
                     </p>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     </ul>
                     <p class="d-flex gap-2">
                         <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true"><span class="fab fa-github"></span> Code</a>
-                        <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true">Visit site <span class="fa fa-angle-right ms-1"></span></a>
+                        <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true">Visit<span class="fa fa-angle-right ms-1"></span></a>
                     </p>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                     </ul>
                     <p class="d-flex gap-2">
                         <a href="https://github.com/Hirwa9/Eliazar-Website" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
-                        <a href="https://eliazarndayisabye.rf.gd/music.php" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown">Visit site <span class="fa fa-angle-right ms-1"></span></a>
+                        <a href="https://eliazarndayisabye.rf.gd/music.php" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown">Visit<span class="fa fa-angle-right ms-1"></span></a>
                     </p>
                 </div>
             </div>
