Updated projects page UI

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                             <!-- Who I am -->
                             <h4 class="mb-4 text-secondaryClr fs-1 text-center">Get to know me</h4>
                             <p class="mb-2 bg-secondaryClr3 text-black2 p-3 p-lg-4 rad-10 small">
-                                I am Hirwa Cyuzuzo Willy, a Rwandan full-stack web developer. Outside of coding, I find joy in music, whether it's playing the piano or participating in my choir. Music is a big part of my life, and my <a href="https://esgrprwanda.rf.gd/esgrp/Services/CHM_Songs" target="_blank">first side project</a> is centered around it.
+                                I am Hirwa Cyuzuzo Willy, a Rwandan full-stack web developer. Outside of coding, I find joy in music, whether it's playing the piano or participating in my choir. Music is a big part of my life, and my <a href="https://esgrprwanda.com/esgrp/Services/CHM_Songs" target="_blank">first side project</a> is centered around it.
                             </p>
                             <div class="px-3 px-lg-4">
                                 <p class="mb-1">Random stuff about me</p>
