--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             <h2 class="display-6 fw-bold py-2 section-title">A glimpse on my projects</h2>
             <div class="d-lg-flex flex-row-reverse mb-5">
                 <p class="col-lg-7 abs-images">
-                    <img src="assets/images/projectImages/esg_chms_landscape.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
-                    <img src="assets/images/projectImages/esg_gallery_portrait_light.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
+                    <img src="assets/images/projectImages/ingoboka_sm_system_landscape.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
+                    <img src="assets/images/projectImages/ingoboka_sm_system_portrait.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
                 </p>
                 <p class="col-lg-5 p-2 p-md-4 fs-5 text-justify">
-                    <b>The ES group</b>, a Rwandan Catholic singing ensemble, offers an interactive website for members and visitors. It provides details on the group's compositions, event galleries, and an interactive calendar for upcoming events. Additionally, visitors can access a wide collection of Rwandan Catholic music files and music teaching resources.<br>
+                    This web application is designed to help members of the IKIMINA INGOBOKA savings group register, track their savings, and calculate interest—all in one place. The system provides a user-friendly interface for members to manage their accounts, view their transaction history, and access financial reports. It also includes an admin panel for group administrators to manage member accounts and generate financial reports.<br>
                     <a href="projects.html" class="btn btn-lg bg-secondaryClr text-light my-4 clickDown">See all projects</a>
                 </p>
             </div>
